# SlicerITKPython

./: CMakeLists.txt  CTestConfig.cmake  SuperBuild.cmake
SuperBuild/: External_python-itk.cmake
